# LoGen

./: .gitignore  Cargo.toml  DEV_README.md  LoGen.code-workspace  Makefile  README.md  cobertura.xml  docker-compose.yml  generate_examples.sh  setup-assets.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/fonts/: README.md
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: main.rs
benches/: logo_bench.rs
docs/: issue_list.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
gui-tauri/: Cargo.toml  README.md  tauri.conf.json
src/: cli.rs  lib.rs
src/algorithms/: geometric_pattern.rs  mod.rs  monogram_badge.rs
src/core/: geometry.rs  mod.rs  palette.rs  seed.rs  typography.rs
src/render/: mod.rs  png.rs  svg.rs
tests/: determinism.rs  golden_tests.rs  input_validation.rs  normalization.rs  output_formats.rs  preset_parsing.rs  seed_derivation.rs
